# x64lldbg

./: .gitignore  CLAUDE.md  CMakeLists.txt
resources/: resources.qrc
src/: main.cpp
src/common/: Configuration.cpp  Configuration.h
src/core/: DebugCore.cpp  DebugCore.h
src/gui/: CPUWidget.cpp  CPUWidget.h  MainWindow.cpp  MainWindow.h
src/gui/dialogs/: EditBreakpointDialog.cpp  EditBreakpointDialog.h  GotoDialog.cpp  GotoDialog.h  ScriptEditorDialog.cpp  ScriptEditorDialog.h
src/gui/widgets/: BreakpointsView.cpp  BreakpointsView.h  CPUArgumentWidget.cpp  CPUArgumentWidget.h  CPUDisassembly.cpp  CPUDisassembly.h  CPUDump.cpp  CPUDump.h  CPUInfoBox.cpp  CPUInfoBox.h  CPURegistersView.cpp  CPURegistersView.h  CPUSideBar.cpp  CPUSideBar.h  CPUStack.cpp  CPUStack.h  CallStackView.cpp  CallStackView.h  CommandLineEdit.cpp  CommandLineEdit.h  LogView.cpp  LogView.h  MemoryMapView.cpp  MemoryMapView.h  ScriptView.cpp  ScriptView.h  ThreadsView.cpp  ThreadsView.h
test/: hello  hello.c  smoke_test.cpp
